fix: hide toc on smaller screens

--- a/src/styles/_Page.scss
+++ b/src/styles/_Page.scss
@@ -1,15 +1,27 @@
 @import '~@stoplight/ui-kit/styles/blueprint/variables';
 
+$PageContent: 1000px;
+$PageToc: 200px;
+
 .Page {
-  &__header,
   &__content {
-    max-width: 1000px;
+    max-width: calc(#{$PageContent} + #{$PageToc});
   }
 
   &__header {
+    max-width: $PageContent;
+
     .HttpOperation__Path {
       height: 30px;
     }
+  }
+
+  &__toc {
+    width: $PageToc;
+  }
+
+  .MarkdownViewer {
+    max-width: $PageContent;
   }
 
   .#{$ns}-dark & {
